--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -21,7 +21,7 @@
           - @group.users.each do |user|
             .chat-group-user.clearfix{ id: "chat-group-user-#{user.id}" }
               %input{ type: "hidden", name: "group[user_ids][]", value: user.id }
-              %p.chat-group-user__name= user.name
+              %p.chat-group-user__name
               - unless user.id == current_user.id
                 %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove{ 'data-user-id': user.id } 削除
                 -# = link_to "削除", "javascript:void(0)",class:"user-search-remove chat-group-user__btn chat-group-user__btn--remove", "data-user-id": "#{user.id}"
